--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@ out-tsc/
 debug.log
 npm-debug.log
 src/**/*.js
+src/**/*.css
 !src/demo/systemjs.config.js
 !src/demo/systemjs.config.lib.js
 *.js.map
+*.css.map
 e2e/**/*.js
 e2e/**/*.js.map
