--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "lint": "tslint ./src/**/*.ts -t verbose"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
+    "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0",
+    "@angular/forms": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0",
+    "@angular/common": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
   },
   "devDependencies": {
-    "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
     "@angular/compiler-cli": "~4.0.0",
     "@angular/core": "~4.0.0",
@@ -71,5 +72,8 @@
     "tslint": "^4.4.2",
     "typescript": "^2.2.1",
     "zone.js": "^0.8.4"
+  },
+  "dependencies": {
+    "inputmask": "^3.3.6"
   }
 }
