--- a/integration/package.json
+++ b/integration/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@angular/common": "^4.1.3",
+    "@angular/forms": "^4.1.3",
     "@angular/compiler": "^4.1.3",
     "@angular/compiler-cli": "^4.1.3",
     "@angular/core": "^4.1.3",
