--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "node-sass": "^4.5.2",
     "rimraf": "^2.6.1",
     "rollup": "^0.42.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.1",
     "rollup-plugin-uglify": "^2.0.1",
     "rxjs": "^5.0.1",
@@ -75,6 +77,7 @@
     "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "inputmask": "^3.3.6"
+    "inputmask": "^3.3.6",
+    "the-answer": "^1.0.0"
   }
 }
